--- a/app/static/style.css
+++ b/app/static/style.css
@@ -2,10 +2,8 @@ body {
 	background-color: #E3E3E3;
 	font-family: "Rubik", sans-serif;
 	font-size: 20px;
-}
-
-#canvas {
-	border: 2px solid black;
+	max-width: max-content;
+	margin: auto;
 }
 
 .content {
@@ -13,6 +11,8 @@ body {
 	text-align: center;
 }
 
+
+/******* LEFT ************************************************************************************/
 
 .left {
 	float: left;
@@ -24,22 +24,68 @@ body {
 }
 
 
+#canvas {
+	border: 4px solid black;
+	position: relative;
+}
+
+.button {
+	font-size: 18px;
+	padding: 10px;
+	border-radius: 20px;
+	width: 100px;
+	margin: 4px;
+	border: 0;
+}
+
+.undo-button {
+	background-color: #95A7D5;
+	margin-left: 0px;
+	float: left;
+}
+.clear-button {
+	background-color: #D595A7;
+	border-color: yellow;
+	float: left;
+}
+.pred-button {
+	background-color: #A7D595;
+	position: absolute;
+	display: block;
+	margin-left: 458px;
+}
+
+/******* RIGHT ***********************************************************************************/
 .right {
 	float: right;
+}
+
+.description {
+	font-size: 25px;
+	margin-top: 90px;
+}
+
+.prediction {
+	padding-left: 40px;
+	text-align: left;
 }
 
 .predicted {
 	font-family: "Roboto Serif", sans-serif;
 }
 
+ol {
+	padding: 0;
+}
 
 img {
-	width: 200px;
-	height: 200px;
+	padding: 30px 30px 0 30px;
+	height: 300px;
 }
 
 li {
 	display: list-item;
 	list-style-position: inside;
+
 }
 
