Added screen responsiveness

--- a/app/templates/drawing.html
+++ b/app/templates/drawing.html
@@ -25,7 +25,8 @@
         <i class="fas fa-arrow-left"></i>
       </a>
       <div class="left-title">SKETCHS BOT</div>
-      <form method="post" action="{{ url_for('main.prediction') }}" id="prediction-form">
+      <form method="post" action="{{ url_for('main.prediction', _anchor='source-code') }}"
+            id="prediction-form">
         <input type="hidden" id="canvasimg" name="canvasimg">
         <input type="hidden" id="canvasdata" name="canvasdata" value="{{ canvasdata }}">
         <canvas id="canvas"></canvas>
@@ -65,7 +66,7 @@
         </div>
       </div>
     </div>
-    <div class="source-code">
+    <div class="source-code" id="source-code">
       <a href="https://github.com/CrisLeaf/sketches_bot" target="_blank">
         Código Fuente: <i class="fab fa-github"></i>
       </a>
